# hyperbolic

./: .gitignore  embedding_metrics.csv  embeds.py  index.html  kuramoto.py  math.js  mult_table.py  poincare.py  projection.py  pyproject.toml  requirements.txt  sandbox.py  streamlit_projection.py  utils.py  waves_plt.py  waves_spectral.py
experiments/: lagrangian.py  moderngl.py  mult_table.py  projection.py  sandbox.py  utils.py
experiments/waves/: waves.py  waves_autograd.py  waves_laplacian.py
hyperbolic_graph_embedding/: embeds.py  exp.py  graph_embedding.ipynb  maths.py  models.py  setup.py  train.py  utils.py  visualization.py
hyperbolic_graph_embedding/data/: tree.py
hyperbolic_graph_embedding/embeddings/: base_embedding.py  euclidean_embedding.py  hyperbolic_embedding.py
hyperbolic_graph_embedding/experiments/: evaluate.py  run_experiment.py
hyperbolic_graph_embedding/manifolds/: base_manifold.py  poincare_manifold.py
hyperbolic_graph_embedding/math_utils/: metrics.py  utils.py
hyperbolic_graph_embedding/visualization/: animation.py  plotter.py
kuramoto/: arc_experiments.py  embeds.py  expression_embeds.py  kura_v2.py  kuramoto.py  kuramoto_embeddings.ipynb  kuramoto_full.py  oscillatory_nn.py
