[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbolic-graph-embedding"
version = "0.1.0"
description = "Hyperbolic graph embedding methods and experiments"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Author", email = "author@example.com"}  # Replace with your actual information
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "scikit-learn>=1.3.0",
    "geoopt>=0.5.0",
    "torch_geometric>=2.3.0",
    "sympy>=1.12",
    "plotly>=5.14.0",
    "imageio>=2.31.0",
    "Pillow>=10.0.0",
    "imageio-ffmpeg>=0.4.8",
    "arc @ git+https://github.com/R1704/arc.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
]

[project.urls]
"Homepage" = "https://github.com/your-username/hyperbolic-graph-embedding"  # Replace with your actual repository URL
"Bug Tracker" = "https://github.com/your-username/hyperbolic-graph-embedding/issues"

[tool.setuptools]
packages = [
    "hyperbolic_graph_embedding",
    "hyperbolic_graph_embedding.data",
    "hyperbolic_graph_embedding.embeddings",
    "hyperbolic_graph_embedding.experiments",
    "hyperbolic_graph_embedding.manifolds",
    "hyperbolic_graph_embedding.math_utils",
    "hyperbolic_graph_embedding.visualization",
    "kuramoto",
    "experiments",
    "experiments.waves",
]

[tool.setuptools.package-data]
"*" = ["*.png", "*.gif", "*.mp4"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"